samples/_failures_safe/1761040422_fd2915_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_52d9c428.c: In function ‘main’:
./samples/SAFE/__tmp_52d9c428.c:130:12: error: missing terminating " character
  130 |     printf("Vector 1: (%.3f, %.3f
      |            ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_52d9c428.c:130:5: error: expected expression at end of input
  130 |     printf("Vector 1: (%.3f, %.3f
      |     ^~~~~~
./samples/SAFE/__tmp_52d9c428.c:130:5: error: expected declaration or statement at end of input
